--- a/hugo.yaml
+++ b/hugo.yaml
@@ -53,7 +53,7 @@ params:
   dateFormat: "January 2, 2006"
 
   page:
-    width: wde
+    width: wide
 
   search:
     enable: true
@@ -72,6 +72,7 @@ params:
   navbar:
     displayTitle: false
     displayLogo: true
+    width: wide
     logo:
       path: images/logo.svg
       dark: images/logo_dark.svg
