--- a/hugo.yaml
+++ b/hugo.yaml
@@ -25,36 +25,37 @@ menu:
     - identifier: plugins
       name: Plugins
       weight: 2
-    - identifier: powerlines
-      name: Fast Powerlines
-      url: /powerlines
-      parent: plugins
-      weight: 1
-    - identifier: pipes
-      name: Pipe Builder
-      url: /pipes
-      parent: plugins
-      weight: 2
-    - identifier: fencetool
-      name: Fence Tool
-      url: /fencetool
-      parent: plugins
-      weight: 3
     - identifier: assets
       name: Assets
       weight: 3
-    - identifier: fogarea
-      name: Fog Area
-      url: /fogarea
-      parent: assets
-      weight: 1
     - name: About
-      pageref: /about
+      pageRef: /about
       weight: 4
     - name: Search
       weight: 5
       params:
         type: search
+      
+    - identifier: powerlines
+      name: Fast Powerlines
+      pageRef: /powerlines
+      parent: plugins
+      weight: 1
+    - identifier: pipes
+      name: Pipe Builder
+      pageRef: /pipes
+      parent: plugins
+      weight: 2
+    - identifier: fencetool
+      name: Fence Tool
+      pageRef: /fencetool
+      parent: plugins
+      weight: 3
+    - identifier: fogarea
+      name: Fog Area
+      pageRef: fogarea
+      parent: assets
+      weight: 1
     
 enableGitInfo: true
 enableInlineShortcodes: true
@@ -65,6 +66,9 @@ params:
 
   page:
     width: wide
+  
+  imageZoom:
+    enable: true
 
   search:
     enable: true
