--- a/hugo.yaml
+++ b/hugo.yaml
@@ -53,7 +53,7 @@ menu:
       weight: 3
     - identifier: fogarea
       name: Fog Area
-      pageRef: fogarea
+      pageRef: /fogarea
       parent: assets
       weight: 1
     
@@ -61,6 +61,10 @@ enableGitInfo: true
 enableInlineShortcodes: true
 
 params:
+  analytics:
+    goatCounter:
+      code: "lightstefar"
+
   displayUpdatedDate: true
   dateFormat: "January 2, 2006"
 
